testdata/good/before/globals/layout.tw
<h1>{{ global.name }}</h1>
@reserve('content')