testdata/bad/unknown-named-pass/user.tw
<div class="user">
    <h2>{{ name }}</h2>
    @slot("content")
</div>